<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradat"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="75dp"
        android:text="@string/asteroides"
        android:textColor="@color/md_theme_background"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="408dp"
        android:text="@string/jugar"
        android:textColorLink="#E91E63"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitol"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnPuntuacions"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/puntuacions"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSobre"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/btnSobre"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sobre"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfigurar"
        app:layout_constraintVertical_bias="0.014" />

    <Button
        android:id="@+id/btnConfigurar"
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/configurar"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJugar" />

</androidx.constraintlayout.widget.ConstraintLayout>